--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <script type="text/javascript" src="scripts.js"></script>
 <body>
     <h1 id="pos" onclick="callme">hello</h1>
-    <h2> Hi</h2>
+    <h2> Shivam game khelta rehta hai</h2>
     <h3> Hello</h3>
+    <h3 id="ps"></h3>
 </body>
 </html>
