--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
+<!doctype html>
 <html>
+    <head>
+        <title>Hello</title>
  <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="scripts.js"></script>
+        </head>
 <body>
     <h1 id="pos" onclick="callme">hello</h1>
-    <h2> Shivam game khelta rehta hai</h2>
-    <h3> Hello</h3>
-    <h3 id="ps"></h3>
+    <h2 id="pos1">Shivam game khelta rehta hai</h2>
+    <h3>Hello</h3>
+    <div>a</div>
+    <h3 id="ps">New</h3>
+
+    <div class="hello">
+        <p>
+            Hello
+        </p>
+    </div>
 </body>
 </html>
